# Solana

./: .gitignore  Cargo.toml  Instructions.md  README.md  WALKTHROUGH.md  WALKTHROUGH_ROOT.md  bench_race.sh
api/: Cargo.toml
api/src/: main.rs
client/: .env.example  .gitignore  DEPLOY.md  README.md  package.json  tsconfig.json
client/src/: index.ts
client/src/engine/: bondingCurve.ts  connection.ts  grpc.ts  helius.ts  jito.ts  position.ts  priority.ts  safety.ts  simulation.ts  sniper.ts  transaction.ts
client/src/strategies/: pumpfun.ts
client/src/utils/: keys.ts  pda.ts
common/: Cargo.toml
config/: config.example.toml
executor/: Cargo.toml
executor/src/: engine.rs
mev/: Cargo.toml
mev/src/: jito.rs  lib.rs
mvp/: .gitignore  README.md
mvp/api/: Cargo.toml
mvp/api/src/: main.rs
mvp/common/src/: error.rs  lib.rs  types.rs
mvp/config/: config.example.toml
mvp/executor/: Cargo.toml
mvp/executor/src/: engine.rs
mvp/mev/: Cargo.toml
mvp/mev/src/: jito.rs
mvp/strategies/: Cargo.toml
mvp/strategies/src/: lib.rs  pumpfun.rs  router.rs
strategies/src/: router.rs
