[package]
name = "mev"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
bs58 = "0.4"
common = { path = "../common" }
